glass centralizado / fonte do h1 e h3, junto com a centralização de titulo e sub-titulo

--- a/src/pages/bio.html
+++ b/src/pages/bio.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <div class="glass">
-        <h1>Disputado antes mesmo do 1º lançamento</h1>
+        <h1>TETO</h1>
+        <h3>Disputado antes mesmo do 1º lançamento.</h3>
 
-        <p></p>
+        <p>teste</p>
     </div>
 </html>
