--- a/src/pages/bio.html
+++ b/src/pages/bio.html
@@ -117,48 +117,49 @@
                 <h1 class="title">TETO</h1>
                 <h3>Disputado antes do 1° lançamento</h3>
 
-                <!--Instagram-->
-                <div 
-                class="box">
-                    <a
-                    href="https://www.instagram.com/euteto/?hl=pt-br"
-                    target="_blank"
-                    class="instagram">
+                <div class="botoes">
+                    <!--Instagram-->
+                    <div 
+                    class="box">
+                        <a
+                        href="https://www.instagram.com/euteto/?hl=pt-br"
+                        target="_blank"
+                        class="instagram">
 
-                        <div 
-                        class="icon-s"
-                        id="icone-do-insta">
-                            <img 
-                            src="/src/resources/icons/bio/instagram.png" 
-                            alt="Instagram icon" 
-                            class="img-insta">
-                        </div>
+                            <div 
+                            class="icon-s"
+                            id="icone-do-insta">
+                                <img 
+                                src="/src/resources/icons/bio/instagram.png" 
+                                alt="Instagram icon" 
+                                class="img-insta">
+                            </div>
 
-                        <p>Instagram</p>
+                            <p>Instagram</p>
 
-                     </a>
+                        </a>
+                    </div>
+
+                    <!--Twitter-->
+                    <div 
+                    class="box">
+                        <a 
+                        href="https://twitter.com/seuteto"
+                        target="_blank"
+                        class="twitter">
+
+                            <div 
+                            class="icon-s">
+                                <img 
+                                src="/src/resources/icons/bio/twitter-logo-4.png" 
+                                alt="twitter icon" 
+                                class="img-ttw">
+                            </div>
+
+                            <p>Twitter</p>
+                        </a>
+                    </div>
                 </div>
-
-                <!--Twitter-->
-                 <div 
-                 class="box">
-                     <a 
-                     href="https://twitter.com/seuteto"
-                     target="_blank"
-                     class="twitter">
-
-                         <div 
-                         class="icon-s">
-                             <img 
-                             src="/src/resources/icons/bio/twitter-logo-4.png" 
-                             alt="twitter icon" 
-                             class="img-ttw">
-                         </div>
-
-                         <p>Twitter</p>
-                     </a>
-                 </div>
-
             </ansaide>   
             
 
