--- a/src/pages/bio.html
+++ b/src/pages/bio.html
@@ -177,14 +177,12 @@
                     O lançamento de seu álbum "Previas.zip" ocorreu meses depois, e antes disso até rolava uma disputa entre gravadoras para contratar o cantor.
                     <br><br>
                         
-                    O sucesso das prévias na internet fez com que o passe de Teto ficasse valorizado, o que gerou até uma briga entre as duas maiores produtoras de rap do nordeste: Hash Produções e 30praum, portanto sua escolha foi ir para a produtora 30praum, que tem como sócio, o rapper Matuê                    
+                    O sucesso das prévias na internet fez com que o passe de Teto ficasse valorizado, o que gerou até uma briga entre as duas maiores produtoras de rap do nordeste: Hash Produções e 30praum, portanto sua escolha foi ir para a produtora 30praum, que tem como sócio, o rapper Matuê.                   
                 </p>
             </div>
 
         </main>
     </div>
-
-     
 
 </body>
 </html>
