premios feito, mas falta a organização de box shadow

--- a/src/pages/bio.html
+++ b/src/pages/bio.html
@@ -54,7 +54,7 @@
             <!--<a target="_blank" href="https://icons8.com/icon/43759/fones-de-ouvido">Fones de ouvido</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
 
             <a 
-            href="#">
+            href="/src/pages/premiacoes.html">
                 <li> 
                     <img 
                     src="/src/resources/icons/home/header/icons8-troféu-48.png" 
