--- a/src/pages/bio.html
+++ b/src/pages/bio.html
@@ -93,7 +93,7 @@
             <!--<a target="_blank" href="https://icons8.com/icon/17774/microfone-2">Microfone 2</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
 
             <a 
-            href="#">
+            href="/src/pages/videos.html">
                 <li>  
                     <img 
                     src="/src/resources/icons/home/header/icons8-chamada-de-vídeo-32.png" 
