--- a/src/pages/bio.html
+++ b/src/pages/bio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/src/resources/css/bio.css">
+    <link rel="stylesheet" href="../resources/css/bio.css"> 
     <title>Biografia</title>
 </head>
 <body>
@@ -16,10 +16,10 @@
 
         <ul>  
         <a 
-        href="/index.html">
+        href="">
             <li> 
                 <img 
-                src="/src/resources/icons/music/icons/icons8-casa-32.png" 
+                src="../teto/src/resources/icons/music/icons/icons8-casa-32.png" 
                 alt="Ícone do livro" 
                 class="iconess">  
 
