feat(index): altera local do arquivo

--- a/src/pages/bio.html
+++ b/src/pages/bio.html
@@ -16,7 +16,7 @@
 
         <ul>  
         <a 
-        href="">
+        href="./index.html">
             <li> 
                 <img 
                 src="../teto/src/resources/icons/music/icons/icons8-casa-32.png" 
